# AEsirClaw

./: .config.yaml.swp  .dockerignore  .gitignore  LICENSE  README.md  config_example.yaml  guild1.db-shm  guild1.db-wal  main.py  pyproject.toml
agent_core/: config.py  controller.py  debouncer.py  llm.py  output.py  pipeline.py  scheduler.py  trigger.py
agent_core/memory/: extractor.py  long_term.py  short_term.py
agent_core/tools/: __init__.py  docker_executor.py  mcp_tools.py
agent_core/utils/: __init__.py  multimodal.py
config/: bot_example.yaml  example_personal.yaml  guild1.db-shm  guild1.db-wal  persona_firefly.yaml  persona_xlpj-quiet.yaml  persona_xlpj.yaml  personal_OPCI_firefly.yaml
docker/: Dockerfile  docker_init.sh
plugins/agent_router/: __init__.py  agent_router.py
plugins/hello_plugin/: hello_plugin.py
skills/media/: SKILL.md
skills/media/src/: image_tool.py
skills/summary/: SKILL.md  SKILL_latex.md
skills/web/: SKILL.md
skills/web/src/: scrape.py  search.py
test/: test_docker.py  test_llm.py  test_mcp.py  test_root_marker.py  test_scheduler.py
